<resources>
  <string name="app_name">ESMS</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="species_hint">Species Hint</string>
  <string name="new_species">New Species</string>
  <string name="note_fragment">Note Fragment</string>
  <string name="note_type">Note Type</string>
  <string name="radio_button_season_note">Attribute</string>
  <string name="radio_button_location_note">Habitat</string>
  <string name="radio_button_conditions_note">General</string>
  <string name="recent_note">Recent Note</string>
  <string name="add_species_tooltip">Add new speciesCase case.</string>
  <string name="add_team_member_tooltip">Add new team member.</string>
  <string name="add_evidence_tooltip">Add new evidence.</string>
  <string name="note_type_hint">Note type</string>
  <string name="recent_notes">Recent Notes</string>
  <string name="home_title">Home</string>
  <string name="personnel_title">Personnel</string>
  <string name="audit_title">Audit</string>
  <string name="settings_title">Settings</string>
  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="display_name_format">Signed in as %s</string>
  <string name="sign_out">Sign out</string>
  <string name="unknown">Unknown</string>
  <string name="team">Team</string>
  <string name="evidence">Evidence</string>
  <string name="a_view_pager">A view pager</string>
  <string name="unknown_tab">Unknown</string>
  <string name="team_tab">Team</string>
  <string name="evidence_tab">Evidence</string>
  <string name="user_admin">User admin</string>
  <string name="user_admin_settings">User Admin</string>
  <string name="speciesCase">Species</string>
  <string name="settings">Settings</string>
  <string name="admin_role">Admin</string>
  <string name="active">Active</string>
  <string name="lead_role">Lead</string>
  <string name="researcher_role">Researcher</string>
  <string name="summary_hint">Summary</string>
  <string name="phase_prompt">Phase</string>
  <string name="member">Member</string>
  <string name="add_member">Add member</string>
  <string name="remove_team_member">Remove team member</string>
  <string name="available_prompt">Available prompt</string>
  <string name="new_evidence_title">New Evidence</string>
  <string name="clear_evidence_click_on_x">Clear evidence click on x</string>
  <string name="note">Evidence Note</string>
  <string name="evidence_location">Evidence Location</string>
  <string name="name">Evidence Name</string>
  <string name="upload_resource">Upload resource</string>
  <string name="evidence_title">Evidence title</string>
  <string name="resource_title">Resource title</string>
  <string name="resource_description">Resource description</string>
  <string name="add_attachment">Add attachment</string>
  <string name="expands_to_show_attachments">Expands to show attachments</string>
  <string name="collapse_attachments">Collapse attachments</string>
  <string name="displays_attached_resource">Displays attached resource</string>
  <string name="resource_id">Resource ID</string>
  <string name="mime_type">Resource Type</string>
  <string name="resource_path">Resource Path</string>
  <string name="date_time">Date &amp; Time</string>
  <string name="attachment_title">Attachment Title</string>
  <string name="attachment_description">Attachment Description</string>
  <string name="attachment_detail">Attachment Detail</string>
</resources>