<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_map"
  app:startDestination="@id/navigation_home">

    <action
      android:id="@+id/open_note_dialog"
      app:destination="@id/note_dialog_fragment">
      <argument
        android:name="species_id"
        app:argType="long"/>
      <argument
        android:name="content_uri"
        app:nullable="true"
        app:argType="android.net.Uri"/>
    </action>

  <fragment
    android:id="@+id/navigation_home"
    android:name="edu.cnm.deepdive.esms.controller.NoteHomeFragment"
    android:label="@string/home_title"
    tools:layout="@layout/fragment_note_home"/>

  <fragment
    android:id="@+id/navigation_personnel"
    android:name="edu.cnm.deepdive.esms.controller.Personnel"
    android:label="@string/personnel_title"
    tools:layout="@layout/fragment_personnel"/>

  <fragment
    android:id="@+id/navigation_audit"
    android:name="edu.cnm.deepdive.esms.controller.Audit"
    android:label="@string/audit_title"
    tools:layout="@layout/fragment_audit"/>

  <dialog
    android:id="@+id/note_dialog_fragment"
    android:name="edu.cnm.deepdive.esms.controller.NoteDialogFragment"
    android:label="Note Dialog"
    tools:layout="@layout/fragment_dialog_note">
    <argument
      android:name="species_id"
      app:argType="long"/>
    <argument
      android:name="content_uri"
      app:nullable="true"
      app:argType="android.net.Uri"/>
  </dialog>
</navigation>