<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_static_spacing"
  tools:context=".controller.EvidenceDialogFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/name_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="@dimen/full_static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        android:inputType="text"
        android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/note_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/name_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/location_layout"
      android:layout_margin="@dimen/full_static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top"
        android:hint="@string/note"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/location_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/note_layout"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="@dimen/full_static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top"
        android:hint="@string/evidence_location"/>

    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>