<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_static_spacing"
  tools:context=".controller.NoteDialogFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/image"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:layout_margin="@dimen/half_static_spacing"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/note_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/image"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="@dimen/full_static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="30"
        android:hint="@string/note_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/control_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:barrierMargin="@dimen/full_dynamic_spacing"
      app:barrierDirection="top"
      app:constraint_referenced_ids="radio_group_id"
      app:layout_constraintTop_toBottomOf="@id/note_layout"/>

    <RadioGroup
      android:id="@+id/radio_group_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:gravity="center_vertical"
      app:layout_constraintStart_toStartOf="@id/note_layout"
      app:layout_constraintTop_toBottomOf="@id/control_barrier">

      <RadioButton
        android:id="@+id/radio_button_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_season_note"
        android:textSize="18sp"/>

      <RadioButton
        android:id="@+id/radio_button_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_location_note"
        android:textSize="18sp"/>

      <RadioButton
        android:id="@+id/radio_button_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_conditions_note"
        android:textSize="18sp"/>
    </RadioGroup>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>