<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_static_spacing"
  tools:context=".controller.SpeciesDialogFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:padding="@dimen/half_static_spacing"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/image"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:layout_margin="@dimen/half_static_spacing"
      android:visibility="gone"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/name_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/image"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="@dimen/full_static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        android:inputType="text"
        android:hint="@string/species_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/summary_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/name_layout"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="@dimen/full_static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_dynamic_spacing"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="30"
        android:gravity="top"
        android:hint="@string/summary_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:id="@+id/phase_prompt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/phase_prompt"
      android:labelFor="@id/phase"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/phase"
      app:layout_constraintBottom_toBottomOf="@id/phase"
      android:layout_margin="@dimen/half_dynamic_spacing"/>
    <Spinner
      android:id="@+id/phase"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:prompt="@string/phase_prompt"
      app:layout_constraintTop_toBottomOf="@id/summary_layout"
      app:layout_constraintStart_toEndOf="@id/phase_prompt"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="@dimen/half_dynamic_spacing"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>